; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_mvsw61xx.c_mvsw61xx_enable_serdes.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_mvsw61xx.c_mvsw61xx_enable_serdes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.switch_dev = type { i32 }

@MV_REG_FIBER_SERDES = common dso_local global i32 0, align 4
@MV_PAGE_FIBER_SERDES = common dso_local global i32 0, align 4
@MII_BMCR = common dso_local global i32 0, align 4
@BMCR_PDOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.switch_dev*)* @mvsw61xx_enable_serdes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mvsw61xx_enable_serdes(%struct.switch_dev* %0) #0 {
  %2 = alloca %struct.switch_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.switch_dev* %0, %struct.switch_dev** %2, align 8
  %4 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %5 = load i32, i32* @MV_REG_FIBER_SERDES, align 4
  %6 = load i32, i32* @MV_PAGE_FIBER_SERDES, align 4
  %7 = load i32, i32* @MII_BMCR, align 4
  %8 = call i32 @mvsw61xx_mdio_page_read(%struct.switch_dev* %4, i32 %5, i32 %6, i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %27

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @BMCR_PDOWN, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %12
  %18 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %19 = load i32, i32* @MV_REG_FIBER_SERDES, align 4
  %20 = load i32, i32* @MV_PAGE_FIBER_SERDES, align 4
  %21 = load i32, i32* @MII_BMCR, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @BMCR_PDOWN, align 4
  %24 = xor i32 %23, -1
  %25 = and i32 %22, %24
  %26 = call i32 @mvsw61xx_mdio_page_write(%struct.switch_dev* %18, i32 %19, i32 %20, i32 %21, i32 %25)
  br label %27

27:                                               ; preds = %11, %17, %12
  ret void
}

declare dso_local i32 @mvsw61xx_mdio_page_read(%struct.switch_dev*, i32, i32, i32) #1

declare dso_local i32 @mvsw61xx_mdio_page_write(%struct.switch_dev*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
